add new game - brain-gcd

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,15 @@ packages = [{ include = "brain_games" },]
 python = "^3.8.1"
 prompt = "^0.4.1"
 
-
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
