--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,17 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+classifiers = [
+  "Topic :: Games/Entertainment",
+  "Environment :: Console",
+  "Programming Language :: Python :: 3.8.1",
+  "Operating System :: POSIX :: Linux",
+  "Natural Language :: English",
+]
+description = "This is the first training project from the Python-developer profession on Hexlet.io."
 authors = ["Irina Kurus <evans.mira@yandex.ru>"]
 readme = "README.md"
+repository = "https://github.com/irakuruss/python-project-49"
 packages = [{ include = "brain_games" },]
 
 [tool.poetry.dependencies]
